added saving to excel to getWeightedShares